[gd_scene load_steps=3 format=2]

[ext_resource path="res://Stage/Curtains.gd" type="Script" id=1]
[ext_resource path="res://Images/Curtains.png" type="Texture" id=2]

[node name="Curtains" type="Node2D"]
script = ExtResource( 1 )

[node name="CurtainL" type="Sprite" parent="."]
position = Vector2( -144, 0 )
scale = Vector2( 0.5625, 1 )
texture = ExtResource( 2 )

[node name="VisibleToggle" type="VisibilityNotifier2D" parent="CurtainL"]
position = Vector2( -256, 0 )
scale = Vector2( 8, 4 )
rect = Rect2( 0, -32, 64, 64 )

[node name="CurtainR" type="Sprite" parent="."]
position = Vector2( 126, 0 )
scale = Vector2( 0.5625, 1 )
texture = ExtResource( 2 )
offset = Vector2( 32, 0 )

[node name="VisibleToggle" type="VisibilityNotifier2D" parent="CurtainR"]
position = Vector2( -224, 0 )
scale = Vector2( 8, 4 )
rect = Rect2( 0, -32, 64, 64 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="Timer" to="." method="timer_timeout"]
